--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "build": "pnpm run clean_dist && tsc",
+    "start": "pm2 start dist/app.js",
+    "dev": "nodemon src/app.ts",
+    "clean_dist": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "openai": "^4.86.2"
   }
